fix card text alignment

--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -11,7 +11,7 @@
   margin: 1rem;
   /* position: relative; */
   /* box-shadow: 0 3px 6px #999, 0 3px 6px #999; */
-  text-align: left;
+  /* text-align: left; */
   flex-grow: 1;
   /* width: 100vw; */
 
@@ -20,9 +20,9 @@
 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
-  justify-content: space-between;
+  /* align-items: center; */
+  justify-content: center;
+  /* justify-content: space-between; */
   /* min-height: 700px; */
 
   max-width: 100%;
@@ -39,24 +39,39 @@
   word-wrap: break-word;
 }
 
+.card-text {
+    align-items: none;
+}
+
+.card-image {
+  align-content: center;
+}
+
 .card > .img-container {
   /* height: 60%; */
   /* width: 100%; */
   /* border-radius: 1.5rem 1.5rem 1.5rem 1.5rem; */
   width: 90%;
   height: 20vh;
-  align-content: center;
 
-  overflow: hidden;
-  text-align: center;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  
+  /* align-items: center; */
+  /* align-content: center; */
+
+  /* margin: 4px; */
+  /* overflow: hidden; */
+  /* text-align: center; */
   background: white;
   object-fit: contain;
 
-  margin: 4px;
+  /* margin: 4px; */
   border-color: grey;
   border-width: 2px;
   border-style: solid;
-
 
 }
 
@@ -107,7 +122,7 @@
   margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
   .card {
     width: 33vw;
   }
